# polars-subsecond-testing

./: Cargo.toml  README.md
src/: corr.rs  float_sum.rs  lib.rs  loop_test.rs  main.rs
src/test_components/: mod.rs  test_corr.rs
